cluster/project/nyan/deployment.yml
# Source: nyan/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyan
  labels:
    app.kubernetes.io/name: nyan
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nyan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nyan
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 101
        runAsUser: 101
        runAsGroup: 101
        supplementalGroups:
          - 100
      containers:
        - name: nyan
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          image: "git.local/gitea/nyancat:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 50Mi
      volumes:
        - name: tmp-volume
          emptyDir: {}
