cluster/project/nyan/nyan.yml
# Source: nyan/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyan
  labels:
    app.kubernetes.io/name: nyan
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nyan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nyan
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 101
        runAsUser: 101
        runAsGroup: 101
        supplementalGroups:
        - 100
      containers:
        - name: nyan
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          image: "git.local/gitea/nyancat:latest"
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 50Mi
      volumes:
        - name: tmp-volume
          emptyDir: {}
---
# Source: nyan/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyan
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nyan
---
# Source: nyan/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyan
  annotations:
    cert-manager.io/cluster-issuer: self-signed
  labels:
    app.kubernetes.io/name: nyan
spec:
  tls:
    - hosts:
        - "nyan.local"
      secretName: nyan-secret
  rules:
    - host: "nyan.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nyan
                port:
                  number: 80
